[package]
name = "did-resolver-cheqd"
version = "0.1.0"
authors = ["Cheqd Foundation Limited (https://github.com/cheqd)"]
edition = "2024"
license = "Apache-2.0"
keywords = ["ssi", "did", "cheqd"]
categories = ["web-programming::http-client"]
description = "DID Resolver Rust implementation for did:cheqd method, using the ssi crate and Cheqd GRPC APIs"
rust-version = "1.87"

[dependencies]
ssi-dids-core = "0.1.3"
tonic = { version = "0.12.3", default-features = false, features = [
    "codegen",
    "prost",
    "channel",
    "tls",
    "tls-roots",
    "tls-webpki-roots"
] }
prost = { version = "0.13.3", default-features = false }
prost-types = "0.13.3"
chrono = { version = "0.4.39", default-features = false, features = ["now"] }
url = { version = "2.5.4", default-features = false }
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
thiserror = "1.0.40"
tokio = "1.42.0"

[dev-dependencies]
tokio = { version = "1.42.0", default-features = false, features = [
    "macros",
    "rt",
]}
serde = { version = "1.0", features = ["derive"] }